avançant amb CRUD

--- a/css.css
+++ b/css.css
@@ -1,4 +1,9 @@
 *{margin:0}
+body{
+	overflow-y:scroll;
+}
 table{border-collapse:collapse}
 th,td{border:1px solid #ccc}
 th{font-weight:normal}
+li{margin-bottom:0.5em;margin-top:0.5em}
+hr{border:none;border-bottom:1px solid #ccc}
