--- a/css.css
+++ b/css.css
@@ -7,23 +7,27 @@ body{
 	font-family:"Palatino Linotype", "Book Antiqua", Palatino, serif;
 	font-family:"Trebuchet MS", Helvetica, sans-serif;
 	font-family:"San Francisco", -apple-system, system-ui, ".SFNSText-Regular", sans-serif;
-	font-size:13px;
+	font-size:14px;
 }
 
 /*h1,h2,h3*/
 h1,h2,h3{ 
 	font-weight:normal;
-	padding-left:8px; 
+	padding-left:10px; 
 }
-h1{font-size:18px}
-h2{font-size:16px}
-h3{font-size:14px}
+h1{font-size:19px}
+h2{font-size:17px}
+h3{font-size:15px}
 
 /*ul*/
 ul{
+	margin:0;
 	padding-left:25px;
 }
-li{margin-bottom:0.5em;margin-top:0.5em}
+li{
+	margin-top:0.5em;
+	margin-bottom:0.5em;
+}
 
 /*table*/
 table{border-collapse:collapse}
@@ -43,8 +47,9 @@ a:hover{text-decoration:underline}
 
 /*descripcions de relacions persona_{cas,partit,empresa}*/
 span.descripcio{
-	font-size:12px;
+	font-size:11px;
 	color:#666;
+	font-style:italic;
 }
 
 /*data última modificació*/
