--- a/css.css
+++ b/css.css
@@ -19,7 +19,12 @@ h1{font-size:18px}
 h2{font-size:17px}
 h3{font-size:15px}
 
-p{text-align:justify;color:#666}
+/*utilitzat per descripcions de casos, partits i empreses*/
+p{
+	text-align:justify;
+	color:#666;
+	padding-right:5px;
+}
 
 /*ul*/
 ul{
