--- a/css.css
+++ b/css.css
@@ -7,10 +7,7 @@ body{
 }
 
 /*h1,h2,h3*/
-h1,h2,h3{ 
-	font-weight:normal;
-	padding-left:10px; 
-}
+h1,h2,h3{font-weight:normal}
 h1{font-size:18px}
 h2{font-size:17px}
 h3{font-size:15px}
