--- a/css.css
+++ b/css.css
@@ -15,6 +15,7 @@ h1,h2,h3{
 h1{
 	font-size:18px;
 	border-bottom:1px solid #ccc;
+	padding-bottom:5px;
 }
 h2{font-size:17px}
 h3{font-size:15px}
@@ -36,8 +37,7 @@ ul.invisible {display:none}
 li{
 	margin-top:0.5em;
 	margin-bottom:0.5em;
-	text-align:justify;
-	max-width:50em;
+	max-width:60em;
 	padding-right:10px;
 }
 
