--- a/css.css
+++ b/css.css
@@ -31,7 +31,8 @@ p{
 /*unsorted lists*/
 ul{
 	margin:0;
-	padding-left:15px;
+	list-style:none;
+	padding-left:0;
 }
 ul.invisible {
 	display:none;
@@ -42,6 +43,12 @@ li{
 	margin-bottom:0.5em;
 	max-width:60em;
 	padding-right:10px;
+}
+
+li.item {
+	padding:0.7em;
+	border-bottom:1px solid #ddd;
+	margin:0;
 }
 
 /*tables*/
@@ -61,6 +68,14 @@ span[onclick]:hover{text-decoration:underline}
 /*ROOT div*/
 #root {
 	margin-bottom:100px;
+}
+
+/*controls per edit mode (button,select,form)*/
+.update {
+	background:linear-gradient(#666,#888);
+	color:white;
+	text-shadow:0 1px 0 #000;
+	border-radius:0px;
 }
 
 /*CLASSES*/
