--- a/css.css
+++ b/css.css
@@ -10,6 +10,7 @@ h1{
 	border-bottom:1px solid #ccc;
 	padding-bottom:5px;
 	font-weight:normal;
+	margin-bottom:0px;
 }
 h2{
 	font-size:17px;
@@ -45,7 +46,7 @@ th,td{
 	border:1px solid #ccc;
 	border-left:none;
 	border-right:none;
-	padding:2px;
+	padding:4px;
 }
 hr{border:none;border-bottom:1px solid #ccc}
 a{text-decoration:none}
@@ -58,35 +59,41 @@ span[onclick]:hover{text-decoration:underline}
 /*ROOT div*/
 #root {
 	margin-bottom:100px;
+	max-width:50em;
 }
 
 /*controls per edit mode (button,select,form)*/
 button.update, select.update, form.update {
-	background:linear-gradient(#666,#888);
-	color:white;
-	text-shadow:0 1px 0 #000;
-	border-radius:0px;
+	background:linear-gradient(#fafafa,#eee);
+	border:1px solid #ccc;
+	color:666;
+	font-family:monospace;
+	border-radius:10px;
 	margin-top:5px;
 	padding:0.5em;
+	outline:none;
 }
-
+button.update:hover{
+	background:linear-gradient(#eee,#fafafa);
+}
 form.update tr {
-	background:linear-gradient(#666,#888);
+	background:linear-gradient(#eee,#fafafa);
 }
 
 /*CLASSES*/
-
 .flex{
 	display:flex;
 	flex-wrap:wrap;
 }
-
+li.ultima_modificacio {
+	margin-top:50px;
+}
 ul.invisible {
 	display:none;
 }
 li.item {
 	padding:0.7em;
-	border-bottom:1px solid #ddd;
+	border-bottom:1px solid #e5e5e5;
 	margin:0;
 }
 li.item:nth-child(odd) {
@@ -100,6 +107,7 @@ li.item:nth-child(odd) {
 	font-size:14px;
 	margin-top:6px;
 	padding:2px 0;
+	font-family:monospace;
 }
 /*quan el valor val 'empty string' posa el text més clar*/
 .blanc{
@@ -128,11 +136,10 @@ li.item:nth-child(odd) {
 .desplegable{
 	display:block;
 	padding:1em 5px;
-	border:1px solid #ccc;
-	background:#abc;
+	background:rgba(170, 187, 204, 0.4);
 }
 .desplegable:hover {
-	/*de moment res*/
+	/*no trobo cap idea que m'agradi*/
 }
 .desplegable:before {
 	content:"\25be ";/*triangle que apunta cap avall*/
@@ -143,7 +150,7 @@ li.item:nth-child(odd) {
 /*posa padding a <div id=root> si no portrait*/
 @media only screen and (min-width:560px) { 
 	#root {
-		padding-left:8px;
+		padding-left:20px;
 		margin-right:5px;
 	}
 }
