--- a/css.css
+++ b/css.css
@@ -86,7 +86,7 @@
 		display:flex;
 		flex-wrap:wrap;
 	}
-	li.ultima_modificacio {
+	.ultima_modificacio {
 		margin-top:50px;
 	}
 	ul.invisible {
@@ -105,7 +105,7 @@
 	.descripcio{
 		color:#545454;
 		line-height:1.45em;
-		font-size:14px;
+		font-size:12px;
 		margin-top:6px;
 		padding:2px 0;
 		font-family:monospace;
@@ -150,7 +150,6 @@
 	#root {
 		margin-bottom:100px;
 		max-width:50em;
-		padding-left:5px;
 	}
 
 /*MEDIA QUERIES*/
@@ -163,8 +162,14 @@
 		}
 	}
 
-/*taules a portrait*/
+/*mobile: portrait*/
 	@media only screen and (max-width:560px) { 
+		body {
+			font-size:12px;
+		}
+		h1, .portrait_marge, .ultima_modificacio{
+			padding-left:5px;
+		}
 		table {
 			width:100%;
 		}
@@ -176,5 +181,12 @@
 			border-right:none;
 			padding-top:1em;
 			padding-bottom:1em;
+		}
+		.nowrap { 
+			cursor:pointer;
+			display:block;
+			overflow:visible;
+			text-overflow:initial;
+			white-space:normal;
 		}
 	}
