--- a/css.css
+++ b/css.css
@@ -31,7 +31,7 @@
 	}
 	li{
 		margin-top:0.5em;
-		max-width:60em;
+		max-width:70em;
 	}
 	table{
 		border-collapse:collapse;
@@ -40,7 +40,7 @@
 		border:1px solid #ccc;
 	}
 	tr:nth-child(odd){
-		background:#f8f8f8;
+		background:#f9f9f9;
 	}
 	th{
 		font-weight:normal;
@@ -115,6 +115,10 @@
 		font-style:italic;
 		color:#aaa;
 		font-size:11px;
+		max-width:inherit /*evitar 60em de <li>*/;
+	}
+	.blanc:before{
+		content:"~";
 	}
 /*euros, nombre de persones, etc*/
 	.numero {
@@ -149,7 +153,7 @@
 /*ROOT div*/
 	#root {
 		margin-bottom:100px;
-		max-width:50em;
+		max-width:70em;
 	}
 
 /*MEDIA QUERIES*/
